chore: se corrige la duplicidad de variables en _color.scss

--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -7,7 +7,7 @@
 
 $color-palette: (
   ("navy-blue", "#2f4b7c"),
-  ("slate-grey", "#424d83"),
+  ("dark-blue", "#424d83"),
   ("charcoal", "#534f8a"),
   ("slate-blue", "#665191"),
   ("electric-blue", "#795193"),
