chore: se agregan los estilos necesarios (sin personalizar) de primeng

--- a/src/scss/primeng/components/_index.scss
+++ b/src/scss/primeng/components/_index.scss
@@ -1,1 +1,28 @@
-@use './megamenu/megamenu';
+
+// Forms
+@use './inputtext/inputtext';
+@use './inputtextarea/inputtextarea';
+@use './rating/rating';
+@use './tooglebutton/tooglebutton';
+// Buttons
+@use './button/button';
+// Data
+@use './paginator/paginator';
+@use './timeline/timeline';
+@use './tree/tree';
+// Panel
+@use './card/card';
+@use './toolbar/toolbar';
+@use './dialog/dialog';
+@use './sidebar/sidebar';
+@use './tooltip/tooltip';
+// Menu
+@use './menubar/menubar';
+@use './panelmenu/panelmenu';
+// Messages
+@use './toast/toast';
+// Misc
+@use './avatar/avatar';
+@use './chip/chip';
+@use './scrolltop/scrolltop';
+@use './skeleton/skeleton';
