--- a/src/scss/custom/themes/_themes.scss
+++ b/src/scss/custom/themes/_themes.scss
@@ -45,3 +45,13 @@ body {
     background-color: var(--primary-color);
     transition: background-color 0.4s ease-in-out;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-image: linear-gradient(purple, blue);
+}
