chore: se agrega el tamaño xlarge en DeviceService

--- a/src/scss/custom/layout/_responsive.scss
+++ b/src/scss/custom/layout/_responsive.scss
@@ -43,6 +43,12 @@ $font-sizes: (
       @include font-size-variables(nth($font, 1), nth($font, 4));
     }
   }
+
+  &[data-device="xlarge"] {
+    @each $font in $font-sizes {
+      @include font-size-variables(nth($font, 1), nth($font, 4));
+    }
+  }
 }
 
 html {
