chore: se deja solo la barra de navegación en TopMenuComponent

--- a/src/app/shared/components/top-menu/top-menu.component.html
+++ b/src/app/shared/components/top-menu/top-menu.component.html
@@ -21,7 +21,7 @@
     </ng-template>
 </p-menubar>
 <!-- [ngStyle]="{'position': 'fixed', 'bottom': '0px', 'width': '100%'}" -->
-<div style="background-color: black;">
+<!-- <div style="background-color: black;">
     <p-rating [(ngModel)]="val" iconOnClass="bi bi-star-fill" iconOffClass="bi bi-star">
     </p-rating>
 </div>
@@ -39,4 +39,4 @@
         <p-button icon="bi bi-check" (click)="displayMaximizable=false" label="Ok"
             styleClass="p-button-text"></p-button>
     </ng-template>
-</p-dialog>
+</p-dialog> -->
