chore: se modifica FlyingTextComponent para recibir palabras en lugar de caracteres

--- a/src/app/shared/components/flying-text/flying-text.component.html
+++ b/src/app/shared/components/flying-text/flying-text.component.html
@@ -10,10 +10,12 @@
         'padding-left': padding,
         'padding-right': padding
     }">
-    <span 
-        *ngFor="let char of textArray" 
-        class="char" 
-        style="position: relative; display: inline-block;"
-        [ngStyle]="{ 'color': char == ' ' ? 'transparent' : 'inherit'}"
-    >{{ char == ' ' ? '+' : char }}</span>
+    <ng-container *ngFor="let char of textArray">
+        <span 
+            class="word" 
+            style="position: relative; display: inline-block;"
+        >{{ char }}</span>
+        <span class="word" 
+            style="color: transparent; position: relative; display: inline-block;">+</span>
+    </ng-container>
 </div>
