--- a/src/app/shared/components/theme-button/theme-button.component.html
+++ b/src/app/shared/components/theme-button/theme-button.component.html
@@ -1,1 +1,11 @@
-<p>theme-button works!</p>
+<div class="card flex justify-content-center">
+    <form [formGroup]="themeForm">
+        <p-toggleButton 
+            formControlName="checked"
+            [onIcon]="'bi bi-brightness-high-fill'"
+            [offIcon]="'bi bi-moon-stars-fill'"
+            [pTooltip]="themeName" 
+            tooltipPosition="bottom"
+            (click)="changeTheme()"></p-toggleButton>
+    </form>
+</div>
