chore: se modifica atributos de enlaces a Pexels en ScrollingParallaxComponent

--- a/src/app/home/components/scrolling-parallax/scrolling-parallax.component.html
+++ b/src/app/home/components/scrolling-parallax/scrolling-parallax.component.html
@@ -5,11 +5,15 @@
         <span class="pexels">
           <span>
             Foto de
-            <a [href]= "getPropertiesByIndex(i)['photographer_url']" target="_blank">
+            <a [href]= "getPropertiesByIndex(i)['photographer_url']" 
+              target="_blank"
+              rel="noopener noreferrer">
               {{getPropertiesByIndex(i)['photographer']}} 
             </a> 
             proporcionada por 
-            <a href= "https://www.pexels.com" target="_blank">
+            <a href= "https://www.pexels.com" 
+              target="_blank"
+              rel="noopener noreferrer">
               Pexels
             </a>
           </span> 
