chore: se personaliza el diseño de ThemeButtonComponent

--- a/src/app/shared/components/theme-button/theme-button.component.html
+++ b/src/app/shared/components/theme-button/theme-button.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="themeForm">
         <p-toggleButton 
             formControlName="checked"
-            [onIcon]="'bi bi-brightness-high-fill'"
+            [onIcon]="'bi bi-sun-fill'"
             [offIcon]="'bi bi-moon-stars-fill'"
             [pTooltip]="themeName" 
             tooltipPosition="bottom"
