--- a/src/scss/primeng/components/button/_button.scss
+++ b/src/scss/primeng/components/button/_button.scss
@@ -22,14 +22,14 @@
     color: rgba(255, 255, 255, 0.6);
 }
 
-.p-selectbutton .p-button:not(.p-disabled):not(.p-highlight):hover {
+.p-selectbutton .p-button:not(.p-disabled)/* :not(.p-highlight) */:hover {
     background: rgba(255, 255, 255, 0.03);
     border-color: #0b213f;
     color: rgba(255, 255, 255, 0.87);
 }
 
-.p-selectbutton .p-button:not(.p-disabled):not(.p-highlight):hover .p-button-icon-left,
-.p-selectbutton .p-button:not(.p-disabled):not(.p-highlight):hover .p-button-icon-right {
+.p-selectbutton .p-button:not(.p-disabled)/* :not(.p-highlight) */:hover .p-button-icon-left,
+.p-selectbutton .p-button:not(.p-disabled)/* :not(.p-highlight) */:hover .p-button-icon-right {
     color: rgba(255, 255, 255, 0.6);
 }
 
@@ -60,7 +60,7 @@ p-selectbutton.ng-dirty.ng-invalid>.p-selectbutton>.p-button {
 }
 
 .p-togglebutton.p-button {
-    background: #071426;
+    background: var(--teal);
     border: 1px solid #0b213f;
     color: rgba(255, 255, 255, 0.87);
     transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
@@ -71,38 +71,38 @@ p-selectbutton.ng-dirty.ng-invalid>.p-selectbutton>.p-button {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover {
-    background: rgba(255, 255, 255, 0.03);
+.p-togglebutton.p-button:not(.p-disabled)/* :not(.p-highlight) */:hover {
+    background: var(--teal-desaturate);
     border-color: #0b213f;
     color: rgba(255, 255, 255, 0.87);
 }
 
-.p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover .p-button-icon-left,
-.p-togglebutton.p-button:not(.p-disabled):not(.p-highlight):hover .p-button-icon-right {
+.p-togglebutton.p-button:not(.p-disabled)/* :not(.p-highlight) */:hover .p-button-icon-left,
+.p-togglebutton.p-button:not(.p-disabled)/* :not(.p-highlight) */:hover .p-button-icon-right {
     color: rgba(255, 255, 255, 0.6);
 }
 
 .p-togglebutton.p-button.p-highlight {
-    background: #C4B5FD;
-    border-color: #C4B5FD;
+    // background: #C4B5FD;
+    // border-color: #C4B5FD;
     color: #1c2127;
 }
 
-.p-togglebutton.p-button.p-highlight .p-button-icon-left,
-.p-togglebutton.p-button.p-highlight .p-button-icon-right {
-    color: #1c2127;
-}
+// .p-togglebutton.p-button.p-highlight .p-button-icon-left,
+// .p-togglebutton.p-button.p-highlight .p-button-icon-right {
+//     color: #1c2127;
+// }
 
-.p-togglebutton.p-button.p-highlight:hover {
-    background: #b3a0fc;
-    border-color: #b3a0fc;
-    color: #1c2127;
-}
+// .p-togglebutton.p-button.p-highlight:hover {
+//     background: #b3a0fc;
+//     border-color: #b3a0fc;
+//     color: #1c2127;
+// }
 
-.p-togglebutton.p-button.p-highlight:hover .p-button-icon-left,
-.p-togglebutton.p-button.p-highlight:hover .p-button-icon-right {
-    color: #1c2127;
-}
+// .p-togglebutton.p-button.p-highlight:hover .p-button-icon-left,
+// .p-togglebutton.p-button.p-highlight:hover .p-button-icon-right {
+//     color: #1c2127;
+// }
 
 p-togglebutton.ng-dirty.ng-invalid>.p-togglebutton.p-button {
     border-color: #FCA5A5;
@@ -239,7 +239,7 @@ p-togglebutton.ng-dirty.ng-invalid>.p-togglebutton.p-button {
 }
 
 .p-button.p-button-icon-only {
-    width: 3rem;
+    width: 2.5rem;
     padding: 0.75rem 0;
 }
 
@@ -250,7 +250,12 @@ p-togglebutton.ng-dirty.ng-invalid>.p-togglebutton.p-button {
 
 .p-button.p-button-icon-only.p-button-rounded {
     border-radius: 50%;
-    height: 3rem;
+    height: 2.5rem;
+}
+
+.p-button.p-button-icon-only {
+    // border-radius: 50%;
+    height: 2.5rem;
 }
 
 .p-button.p-button-sm {
