--- a/src/app/shared/components/top-menu/top-menu.component.html
+++ b/src/app/shared/components/top-menu/top-menu.component.html
@@ -1,25 +1,64 @@
-<p-menubar [model]="items">
-    <ng-template pTemplate="start">
-        <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2">
-    </ng-template>
+<div [ngClass]="{'scrolled': isScrolled }">
+    <p-menubar [model]="items">
+        <ng-template pTemplate="start">
+            <a [routerLink]="['/home']" *ngIf="!isActive">
+                <app-logo [scale]="0.15"></app-logo>
+            </a>
+        </ng-template>
     <ng-template pTemplate="end">
-        <button pButton pRipple type="button" icon="bi bi-facebook" class="p-button-rounded p-button-outlined"></button>
-        <button pButton pRipple type="button" icon="bi bi-instagram"
-            class="p-button-rounded p-button-secondary p-button-outlined"></button>
-        <button pButton pRipple type="button" icon="bi bi-twitter"
-            class="p-button-rounded p-button-success p-button-outlined"></button>
-        <button pButton pRipple type="button" icon="bi bi-linkedin"
-            class="p-button-rounded p-button-info p-button-outlined"></button>
-        <button pButton pRipple type="button" icon="bi bi-github"
-            class="p-button-rounded p-button-warning p-button-outlined"></button>
-        <button pButton pRipple type="button" icon="bi bi-heart"
-            class="p-button-rounded p-button-help p-button-outlined"></button>
-        <span class="p-input-icon-left">
-            <i class="bi bi-search"></i>
-            <input type="text" pInputText placeholder="Search" [(ngModel)]="value" />
-        </span>
+        <div class="menu-items-end">
+            <a href="https://github.com/hararecmg" 
+            target="_blank" 
+            rel="noopener noreferrer" 
+                class="me-2"
+                pTooltip="github" 
+                tooltipPosition="bottom"
+                *ngIf="!userDevice.isHandset && !isActive">
+                <button pButton pRipple type="button" icon="bi bi-github"
+                class="p-button-rounded p-button-success p-button-outlined"></button>
+            </a>
+            <a href="https://www.linkedin.com/in/hararec-medina-gonzález" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="me-2"
+                pTooltip="linkedin" 
+                tooltipPosition="bottom"
+                *ngIf="!userDevice.isHandset && !isActive">
+                <button pButton pRipple type="button" icon="bi bi-linkedin"
+                    class="p-button-rounded p-button-warning p-button-outlined"></button>
+                </a>
+                <a href="https://www.twitter.com/HararecMG" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="me-2"
+                pTooltip="twitter" 
+                tooltipPosition="bottom"
+                *ngIf="!userDevice.isHandset && !isActive">
+                <button pButton pRipple type="button" icon="bi bi-twitter"
+                    class="p-button-rounded p-button-info p-button-outlined"></button>
+                </a>
+            <a href="https://www.facebook.com/hararec.medinagonzalez?mibextid=ZbWKwL" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="me-2"
+                pTooltip="facebook" 
+                tooltipPosition="bottom"
+                *ngIf="!userDevice.isHandset && !isActive">
+                <button pButton pRipple type="button" icon="bi bi-facebook"
+                class="p-button-rounded p-button-outlined"></button>
+            </a>
+            <div class="me-2" 
+                *ngIf="!userDevice.isHandset && !isActive">
+                <app-theme-button></app-theme-button>
+            </div>
+            <div class="me-2">
+                <app-dots-menu *ngIf="userDevice.isHandset || userDevice.isTablet"
+                (click)="changeMenuActive(1.5)"></app-dots-menu>
+            </div>
+        </div>
     </ng-template>
 </p-menubar>
+</div>
 <!-- [ngStyle]="{'position': 'fixed', 'bottom': '0px', 'width': '100%'}" -->
 <!-- <div style="background-color: black;">
     <p-rating [(ngModel)]="val" iconOnClass="bi bi-star-fill" iconOffClass="bi bi-star">
@@ -35,8 +74,8 @@
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
         sint occaecat
         cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <ng-template pTemplate="footer">
-        <p-button icon="bi bi-check" (click)="displayMaximizable=false" label="Ok"
+        <ng-template pTemplate="footer">
+            <p-button icon="bi bi-check" (click)="displayMaximizable=false" label="Ok"
             styleClass="p-button-text"></p-button>
     </ng-template>
 </p-dialog> -->
