chore: se agrega propiedad 'customClass' de tipo @Input en ThemeButtonComponent

--- a/src/app/shared/components/theme-button/theme-button.component.html
+++ b/src/app/shared/components/theme-button/theme-button.component.html
@@ -6,6 +6,7 @@
             [offIcon]="'bi bi-moon-stars-fill'"
             [pTooltip]="themeName" 
             tooltipPosition="bottom"
-            (click)="changeTheme()"></p-toggleButton>
+            (click)="changeTheme()"
+            [ngClass]="customClass"></p-toggleButton>
     </form>
 </div>
