--- a/src/scss/primeng/components/sidebar/_sidebar.scss
+++ b/src/scss/primeng/components/sidebar/_sidebar.scss
@@ -1,8 +1,10 @@
 .p-sidebar {
-    background: #071426;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
     color: rgba(255, 255, 255, 0.87);
-    border: 1px solid #0b213f;
-    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+    // width: 80vw;
+    // border: 1px solid #0b213f;
+    // box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
 .p-sidebar .p-sidebar-header {
