--- a/src/scss/primeng/components/dialog/_dialog.scss
+++ b/src/scss/primeng/components/dialog/_dialog.scss
@@ -1,13 +1,11 @@
 .p-dialog {
     border-radius: 6px;
     box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
-    border: 1px solid #0b213f;
+    // border: 1px solid #0b213f;
 }
 
 .p-dialog .p-dialog-header {
     border-bottom: 0 none;
-    background: #071426;
-    color: rgba(255, 255, 255, 0.87);
     padding: 1.5rem;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
@@ -21,7 +19,6 @@
 .p-dialog .p-dialog-header .p-dialog-header-icon {
     width: 2rem;
     height: 2rem;
-    color: rgba(255, 255, 255, 0.6);
     border: 0 none;
     background: transparent;
     border-radius: 50%;
@@ -30,7 +27,6 @@
 }
 
 .p-dialog .p-dialog-header .p-dialog-header-icon:enabled:hover {
-    color: rgba(255, 255, 255, 0.87);
     border-color: transparent;
     background: rgba(255, 255, 255, 0.03);
 }
@@ -46,8 +42,7 @@
 }
 
 .p-dialog .p-dialog-content {
-    background: #071426;
-    color: rgba(255, 255, 255, 0.87);
+    // color: rgba(255, 255, 255, 0.87);
     padding: 0 1.5rem 2rem 1.5rem;
 }
 
@@ -77,4 +72,43 @@
 
 .p-dialog.p-confirm-dialog .p-confirm-dialog-message {
     margin-left: 1rem;
+}
+
+:root {
+    &[data-theme="dark"] {
+        .p-dialog .p-dialog-header {
+            background: var(--jet-black);
+            color: var(--snow);
+        }
+
+        .p-dialog .p-dialog-header .p-dialog-header-icon {
+            color: var(--snow);
+        }
+
+        .p-dialog .p-dialog-header .p-dialog-header-icon:enabled:hover {
+            color: var(--snow);
+        }
+
+        .p-dialog .p-dialog-content {
+            background: var(--jet-black);
+        }
+    }
+    &[data-theme="light"] {
+        .p-dialog .p-dialog-header {
+            background: var(--snow);
+            color: var(--jet-black);
+        }
+
+        .p-dialog .p-dialog-header .p-dialog-header-icon {
+            color: var(--jet-black);
+        }
+
+        .p-dialog .p-dialog-header .p-dialog-header-icon:enabled:hover {
+            color: var(--jet-black);
+        }
+
+        .p-dialog .p-dialog-content {
+            background: var(--snow);
+        }
+    }
 }
