--- a/src/app/shared/components/typing-text/typing-text.component.html
+++ b/src/app/shared/components/typing-text/typing-text.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col"
+            [ngStyle]="{
+                'font-size': cssValues['cursor-font-size']
+            }">
             <p class="text"></p>
             <span class="cursor">_</span>
         </div>
@@ -8,7 +11,11 @@
     <div class="row">
         <div class="col">
             <div class="box"></div>
-            <q class="hi"><i class="bi bi-dash-lg"></i>{{ openAiResponse['quote'] }}</q>
+            <q class="hi"
+                [ngStyle]="{
+                    'font-size': cssValues['hi-font-size'],
+                    'color': cssValues['quote-color'],
+                }"><i class="bi bi-dash-lg"></i>{{ openAiResponse['quote'] }}</q>
         </div>
     </div>
 </div>
