chore: se comenta la directiva 'ngComponentOutlet' en ScrollingParallaxComponent

--- a/src/app/home/components/scrolling-parallax/scrolling-parallax.component.html
+++ b/src/app/home/components/scrolling-parallax/scrolling-parallax.component.html
@@ -24,9 +24,9 @@
                 <h2 class="reveal">{{item.title}}</h2>
                 <h2 class="reveal subtitle" 
                   *ngIf="item.subtitle">{{item.subtitle}}</h2>
-                <div class="content-component">
+                <!-- <div class="content-component">
                   <div [ngComponentOutlet]="item.component"></div>
-                </div>
+                </div> -->
             </div>
           </section>
         </section>
