--- a/src/app/home/components/personal-photography/personal-photography.component.html
+++ b/src/app/home/components/personal-photography/personal-photography.component.html
@@ -3,8 +3,5 @@
         'width': width,
         'min-height': minHeight
     }">
-    <img 
-    src="../../../../assets/icons/hararecmg-home.png" 
-    alt="Foto de Hararec MG"
-    class="photo-img">
+    <div class="photo-img"></div>
 </section>
