--- a/src/app/home/components/personal-photography/personal-photography.component.scss
+++ b/src/app/home/components/personal-photography/personal-photography.component.scss
@@ -3,8 +3,6 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    // width: 100%;
-    // min-height: 80vh;
 
     .photo-img {
 
@@ -12,9 +10,10 @@
         bottom: 0;
         right: 0;
         width: 100%;
-        height: auto;
-        object-fit: cover;
-        // width: 100%;
-        // height: 100%;
+        height: 100%;
+        background-image: url('../../../../assets/icons/hararecmg-home.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
     }
 }
