--- a/src/app/shared/components/logo/logo.component.scss
+++ b/src/app/shared/components/logo/logo.component.scss
@@ -7,14 +7,30 @@
     border-radius: 50%;
     transition: border-color 0.5s;
 
-    img {
+    .back {
         position: absolute;
-        max-width: 100%;
-        height: auto;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../../../../assets/icons/rabbit.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        transition: transform 1s ease;
+    }
 
-        &.back {
-            transition: transform 1s ease;
-        }
+    .hat {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background-image: url('../../../../assets/icons/hat.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
     }
 
     &:hover .back, &:active .back {
