se actualiza sitio a 2024

--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -12,7 +12,7 @@
         </svg>
     </div>
     <app-flying-text
-        [text]="'Hararec MG, Desarrollador FullStack & Matemático'"
+        [text]="'¿Tienes una gran idea y necesitas soluciones digitales? Soy Hararec-dev y te ayudaré 🚀'"
         [top]="getResponsiveStyles()['top-flying-text']"
         [width]="getResponsiveStyles()['width-flying-text']"
         [textAlign]="getResponsiveStyles()['text-align-flying-text']"
